bug: added z-index to header

--- a/nav.css
+++ b/nav.css
@@ -22,6 +22,7 @@ header{
     width: 100%;
     padding: 10px 0;
     position: fixed;
+    z-index: 1;
     top: 0;    
 }
 nav{
